@@ -41,7 +41,7 @@
 #define dTRIMESH_OPCODE 1
 #define dTRIMESH_16BIT_INDICES 0
 
-#define dTRIMESH_OPCODE_USE_NEW_TRIMESH_TRIMESH_COLLIDER 0
+#define dTRIMESH_OPCODE_USE_OLD_TRIMESH_TRIMESH_COLLIDER 0
 
 /* #define dUSE_MALLOC_FOR_ALLOCA */
 
